--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ body{
     font-size: 15px;
 }
 
+.navbar button:hover{
+
+    background-color: #8c0d13;
+    background-blend-mode: darken;
+    border: 2px solid #8c0d13;
+}
+
 .Hero-Content{
     width: 1000px;
     margin: auto;
